# ChangeLog for sys-apps/darwin-miscutils
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*darwin-miscutils-5-r1 (02 Feb 2008)
*darwin-miscutils-4-r1 (02 Feb 2008)

  02 Feb 2008; Fabian Groffen <grobian@gentoo.org>
  -darwin-miscutils-4.ebuild, +darwin-miscutils-4-r1.ebuild,
  -darwin-miscutils-5.ebuild, +darwin-miscutils-5-r1.ebuild:
  No longer install rpcgen, since this tool is tightly associated to the OS it
  runs on. In short, the Leopard version breaks on Tiger and vice versa.

*darwin-miscutils-4 (14 Oct 2007)

  14 Oct 2007; Fabian Groffen <grobian@gentoo.org>
  -darwin-miscutils-3.ebuild, +darwin-miscutils-4.ebuild:
  Add some tools of developer_cmds, to have rpcgen and unifdef

*darwin-miscutils-3 (17 Aug 2007)

  17 Aug 2007; Elias Pipping <pipping@mi.fu-berlin.de>
  -darwin-miscutils-2.ebuild, +darwin-miscutils-3.ebuild:
  update to use latest version of shell_cmds, update header, fix typo

*darwin-miscutils-2 (15 Dec 2006)

  15 Dec 2006; Fabian Groffen <grobian@gentoo.org>
  +darwin-miscutils-2.ebuild, -darwin-miscutils-18.ebuild:
  New version with extra utilities from shell_cmds: alias apply getopt
  hostname jot kill killall lastcomm renice script shlock su time w
  whereis.  Changed version scheme to be Gentoo specific, as this package
  is a selection of programs missing in coreutils. findutils, etc.

  9 Nov 2006; Fabian Groffen <grobian@gentoo.org> :

  Initial import of darwin-miscutils, a package with the tools found in
  Darwin: cal, calendar, leave, lock, units.
  