@@ -2,6 +2,12 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*darwin-miscutils-6 (19 Jun 2008)
+
+  19 Jun 2008; Fabian Groffen <grobian@gentoo.org>
+  +darwin-miscutils-6.ebuild:
+  Version bump based on the sources of OSX 10.5.3
+
 *darwin-miscutils-5-r1 (02 Feb 2008)
 *darwin-miscutils-4-r1 (02 Feb 2008)
 
@@ -19,7 +25,7 @@
 
 *darwin-miscutils-3 (17 Aug 2007)
 
-  17 Aug 2007; Elias Pipping <pipping@mi.fu-berlin.de>
+  17 Aug 2007; Elias Pipping <pipping@gentoo.org>
   -darwin-miscutils-2.ebuild, +darwin-miscutils-3.ebuild:
   update to use latest version of shell_cmds, update header, fix typo
 
